--- a/less/cards.less
+++ b/less/cards.less
@@ -2,6 +2,7 @@
   &__widget > * {
     margin: 0;
   }
+ 
   &__item {
     position: relative;
     width: 100%;
@@ -33,9 +34,9 @@
   }
   &__item-description {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    top: 0.5rem;
+    left: 0.5rem;
+    right: 0.5rem;
     bottom: 3rem;
     overflow-y: auto;
     padding: 0;
@@ -64,17 +65,36 @@
         opacity: 1;
       }
     }
+    &.has-action{
+      cursor: pointer;
+    }
   }
   &__item-actions,
   &__item-state {
     position: relative;
   }
   /*theme*/
-  &.cols-2 {
-    .cards__widget {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-      grid-gap: 1rem;
+  &__item.hide-toolbar &__item-actions{
+    display:none;
+  }
+  // Column layout
+  // --------------------------------------------------
+  &__widget.has-columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+  }
+
+  &__widget.has-columns &__item {
+    width: 100%;
+
+    @media (min-width: @device-width-small) {
+      width: 50%;
     }
   }
+  &__widget.has-columns  &__item-inner{
+    margin: 0.5rem;
+  }
+
 }
