Add support for breakpoints

--- a/less/cards.less
+++ b/less/cards.less
@@ -99,13 +99,13 @@
     align-items: stretch;
   }
 
-  &__widget.has-columns &__item {
+  /*&__widget.has-columns &__item {
     width: 100%;
 
-    @media (min-width: @device-width-small) {
+    @media (min-width: @device-width-medium) {
       width: 50%;
     }
-  }
+  }*/
   &__widget.has-columns  &__item-inner{
     margin: 0.5rem;
   }
